[package]
name = "rust_badge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-embedded-hal = "0.1.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-text = "0.7.0"
fugit = "0.3.7"
panic-probe = "0.3.1"
pimoroni_badger2040 = { version = "0.6.0", default-features = false }
static_cell = "2.0.0"
#pimoroni_badger2040 = "0.6.0"
tinybmp = "0.5.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
uc8151 = "0.2.0"

[profile.release]
debug = 2
